# Yaffe-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
src/: assets.rs  controller.rs  database.rs  graphics.rs  input.rs  job_system.rs  logger.rs  main.rs  overlay.rs  platform.rs  platform_code.rs  plugins.rs  pooled_cache.rs  restrictions.rs  server.rs  settings.rs  state.rs  updater.rs  windowing.rs  yaffe_window.rs
src/Assets/: atlas.rs  font.rs  image.rs  mod.rs
src/Data/: game.rs  mod.rs  platform.rs  schema.rs
src/Modals/: game_scraper_modal.rs  mod.rs  overlay_modal.rs  platform_detail_modal.rs  platform_scraper_modal.rs  restricted_modal.rs  settings_modal.rs
src/Scraper/: games_db.rs  mod.rs
src/Ui/: animations.rs  deferred_action.rs  mod.rs  modal.rs  utils.rs  widget_tree.rs
src/Ui/Controls/: checkbox.rs  container.rs  image.rs  label.rs  list.rs  mod.rs  text_box.rs
src/Widgets/: app_list.rs  app_tile.rs  info_pane.rs  mod.rs  platform_list.rs  search_bar.rs  toolbar.rs
src/Windowing/: context_tracker.rs
src/modals/: list_modal.rs  mod.rs  modal.rs  overlay_modal.rs  platform_detail_modal.rs  restricted_modal.rs  settings_modal.rs
src/os/: linux.rs  mod.rs  windows.rs
src/platform_layer/: linux.rs  mod.rs  windows.rs
src/widgets/: animations.rs  app_list.rs  app_tile.rs  background.rs  info_pane.rs  mod.rs  platform_list.rs  search_bar.rs  toolbar.rs
src/yaffe_lib/: lib.rs
src/yaffe_plugin/: lib.rs
yaffe-lib/: Cargo.toml
yaffe-lib/src/: errors.rs  lib.rs  plugin_macro.rs  settings.rs
yaffe-plugin/: Cargo.toml
yaffe-plugin/src/: lib.rs
yaffe-rs/: Cargo.toml  LICENSE  README.md  Yaffe.rc  Yaffe.res  build.rs
yaffe-rs/Assets/: atlas.tex
yaffe-rs/plugins/: yaffe_jellyfin.settings  yaffe_twitch.settings
yaffe-rs/src/: assets.rs  controls.rs  database.rs  game_api.rs  game_db.rs  graphics.rs  input.rs  job_system.rs  logger.rs  main.rs  net_api.rs  overlay.rs  overlay_state.rs  overlay_window.rs  platform.rs  plugins.rs  pooled_cache.rs  restrictions.rs  server.rs  settings.rs  state.rs  updater.rs  utils.rs  windowing.rs  yaffe-helper.rs  yaffe_window.rs
yaffe-rs/src/Assets/: atlas.rs  font.rs  image.rs  mod.rs
yaffe-rs/src/Controls/: checkbox.rs  image.rs  label.rs  list.rs  mod.rs  passbox.rs  text_box.rs
yaffe-rs/src/Data/: game.rs  mod.rs  platform.rs  schema.rs
yaffe-rs/src/Modals/: game_scraper_modal.rs  info_modal.rs  list_modal.rs  menu_modal.rs  message_modal.rs  mod.rs  modal_content.rs  modal_deferred_actions.rs  overlay_modal.rs  platform_detail_modal.rs  platform_scraper_modal.rs  restricted_modal.rs  scraper_modal.rs  settings_modal.rs
yaffe-rs/src/Scraper/: games_db.rs  mod.rs
yaffe-rs/src/Ui/: animations.rs  deferred_action.rs  mod.rs  modal.rs  ui_container.rs  utils.rs  widget_tree.rs
yaffe-rs/src/Ui/Controls/: checkbox.rs  container.rs  image.rs  label.rs  list.rs  mod.rs  text_box.rs
yaffe-rs/src/Ui_Control/: checkbox.rs  focus_group.rs  list.rs  mod.rs  text_box.rs
yaffe-rs/src/Widgets/: app_list.rs  app_tile.rs  background.rs  info_pane.rs  mod.rs  overlay.rs  platform_list.rs  search_bar.rs  toolbar.rs
yaffe-rs/src/Windowing/: app.rs  context_tracker.rs  mod.rs
yaffe-rs/src/modals/: game_scraper_modal.rs  list_modal.rs  mod.rs  modal.rs  overlay_modal.rs  platform_detail_modal.rs  platform_scraper_modal.rs  restricted_modal.rs  settings_modal.rs
yaffe-rs/src/os/: linux.rs  mod.rs  windows.rs
yaffe-rs/src/platform_layer/: linux.rs  mod.rs  windows.rs
yaffe-rs/src/widgets/: animations.rs  app_list.rs  app_tile.rs  background.rs  info_pane.rs  mod.rs  platform_list.rs  search_bar.rs  toolbar.rs
yaffe-rs/yaffe-plugin/: Cargo.toml
