[package]
name = "yaffe-rs"
version = "0.1.0"
authors = ["allex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite3 = "0.24.0"
speedy2d = { version = "1.1.0", default-features = false, features = ["image-loading"] }
lazy_static = "^1"
spmc = "^0.3"
chrono = "^0.4"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
reqwest = { version = "^0.11", features = ["blocking"] }
backtrace = "0.3.59"
image = "0.23.*"
glutin = "^0.27"
takeable-option = "0.4"
#rfd = "0.4.0"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput"]
