[package]
name = "yaffe-rs"
version = "0.8.1"
authors = ["allex"]
edition = "2018"

[[bin]]
name = "yaffe"
path = "src/main.rs"

[[bin]]
name = "yaffe-helper"
path = "src/yaffe-helper.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "^0.37"
speedy2d = { version = "^2.1", default-features = false, features = ["image-loading"] }
spmc = "^0.3"
chrono = "^0.4"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
reqwest = { version = "^0.11", features = ["blocking", "json"] }
image = "^0.24"
glutin = "^0.32"
winit = "^0.30"
glutin-winit = "0.5.0"
raw-window-handle = "0.6"
takeable-option = "^0.5"
memoffset = "^0.9"
libloading = "^0.8"
lazy_static = "^1.5"
log = "^0.4"
log-panics = "2.1.0"
rand = "^0.9"
yaffe-lib = { path = "../yaffe-lib" }
# webview_official = "0.2.0"
wry = "^0.51"
copypasta = "^0.10"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.9"
features = ["libloaderapi", "winerror", "std", "taskschd", "impl-default", "oleauto", "objbase", "xinput", "mmdeviceapi", "endpointvolume", "securitybaseapi", "winbase", "winuser"]

[target.'cfg(target_os="linux")'.dependencies]
libc = "0.2.120"
x11 = "2.19.1"
alsa = "0.6.0"